Remove box shadow, fixes validation red border issue on Firefox, and make iOS look much cleaner.

--- a/client/css/layout.scss
+++ b/client/css/layout.scss
@@ -59,6 +59,11 @@ input::-webkit-inner-spin-button {
 	margin: 0;
 }
 
+input {
+	-webkit-appearance: none;
+	box-shadow: none;
+}
+
 a {
 	color: $link-color;
 	text-decoration: none;
